# openrpc-doc

./: pyproject.toml
openrpc_doc/: builders.py  models.py
