[tool.poetry]
name = "openrpc-doc"
version = "0.1.0"
description = "Generating of OpenRPC documentation."
authors = ["Dzmitry Izaitka <dem214overlord@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
